--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,17 @@
 .page-wrapper {
   text-align: center;
   position: relative;
-  padding: 10px;
+  padding: 30px;
+}
+
+.page-header {
+  padding: 20px;
+  vertical-align: middle;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .home-section {
@@ -10,10 +20,6 @@
 
 .category-section {
   float: right;
-}
-
-.content-wrapper {
-  text-align: center;
 }
 
 .link {
