--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,62 @@
   justify-content: space-between;
 }
 
+.post-card-wrapper:hover .post-title {
+  text-decoration: underline;
+}
+
+.post-card-wrapper {
+  min-height: 150px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  .post-card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    border: 1px solid;
+    border-radius: 6px;
+    padding: 15px;
+    margin: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+
+    .post-title {
+      text-align: left;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .post-content {
+      text-align: left;
+      font-size: 15px;
+    }
+
+    .post-content h1,
+    .post-content h2,
+    .post-content h3,
+    .post-content h4,
+    .post-content h5,
+    .post-content h6 {
+      font-size: inherit;
+      font-weight: inherit;
+      margin: 0;
+    }
+
+    .post-info {
+      display: flex;
+      justify-content: space-between;
+      margin-top: auto;
+      color: gray;
+      font-size: 13px;
+    }
+  }
+}
+
 .home-section {
   float: left;
 }
