--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   .post-card {
     display: flex;
