--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,6 @@
   justify-content: space-between;
 }
 
-.post-card-wrapper:hover .post-title {
-  text-decoration: underline;
-}
-
 .post-card-wrapper {
   min-height: 150px;
   width: 100%;
@@ -44,6 +40,10 @@
       text-align: left;
       font-size: 20px;
       font-weight: bold;
+    }
+
+    &.post-card:hover .post-title {
+      text-decoration: underline;
     }
 
     .post-content {
