--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
   .post-card {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    height: 150px;
+    width: 1000px;
     border: 1px solid;
     border-radius: 6px;
     padding: 15px;
@@ -47,6 +47,12 @@
     .post-content {
       text-align: left;
       font-size: 15px;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      word-break: break-word;
     }
 
     .post-content h1,
