--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+a {
+  text-decoration: none;
+}
 .page-wrapper {
   text-align: center;
   position: relative;
@@ -9,6 +12,7 @@
   height: 60px;
   justify-content: center;
   width: 100%;
+  font-size: 20px;
 }
 
 .page-header {
@@ -21,6 +25,15 @@
   justify-content: space-between;
   max-width: 1040px;
   width: 100%;
+}
+
+.link {
+  color: #000;
+  font-weight: 500;
+}
+
+.link:hover {
+  font-weight: 700;
 }
 
 .post-card-wrapper:hover .post-title {
