--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,11 @@ a {
 }
 
 .link:hover {
-  font-weight: 700;
+  font-weight: bolder;
+}
+
+.active {
+  font-weight: 800;
 }
 
 .post-card-wrapper:hover .post-title {
