💄 page header css 업데이트 (#67)
## summary

page header 부분에 css를 업데이트하였습니다.

- Resolves: #36 

## PR 유형

어떤 유형인가요? 해당되는 유형에 체크해주세요.

**PR 제목 작성시 '[유형에 맞는 gitmoji] 제목'으로 입력 부탁드립니다.**

- [ ] ✨ Feature / 새로운 기능
- [ ] 🐛 Fix / 버그 수정
- [x] 💄 Style / CSS 등 사용자 UI 디자인 변경
- [ ] ♻️ Refactor / 코드 리팩토링(구조 개선, 디렉토리 변경 등...)
- [ ] 📝 Docs / 문서 수정
- [ ] ✅ Test / 테스트 추가, 테스트 리팩토링
- [ ] 💬 Chore / 그 외, 모든 변경점(Package, Rename, Remove, etc...)

## 변경 사항


![0207_headerCSS](https://github.com/bono-log/bono-log.github.io/assets/144116866/56d5702a-7eac-4d3d-839f-aed5641496f5)

- home 탭의 태그를 a태그에서 react Link 태그로 바꾸어주었습니다.
  - 해당 탭의 url로 갔을 때, header부분의 해당 탭 버튼 또한 계속 활성화시키고 싶어 변경하였습니다.
  - 데이터를 필요한 부분만 불러올 수도 있는 장점이 있습니다. 
- pages를 속성에 맞게 posts로 변경하였습니다.
- hover 상태일 때 폰트를 굵게 설정하였습니다.
- home 카테고리와 나머지 about, posts 부분을 떨어트려주었습니다.
- 최대 가로길이를 postcard 너비와 맞추었습니다.

## PR Checklist

PR이 다음 요구 사항을 충족하는지 확인하세요.

- [x] 정상 동작 확인 여부
- [x] commit message convention 충족 여부

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
+a {
+  text-decoration: none;
+}
 .page-wrapper {
   text-align: center;
   position: relative;
   padding: 30px;
+}
+
+.page-header-wrapper {
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  width: 100%;
+  font-size: 20px;
 }
 
 .page-header {
@@ -12,6 +23,22 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  max-width: 1040px;
+  width: 100%;
+}
+
+.link {
+  color: #000;
+  font-weight: 500;
+  padding: 5px;
+}
+
+.link:hover {
+  font-weight: bolder;
+}
+
+.active {
+  font-weight: 800;
 }
 
 .post-card-wrapper:hover .post-title {
@@ -74,16 +101,4 @@
       font-size: 13px;
     }
   }
-}
-
-.home-section {
-  float: left;
-}
-
-.category-section {
-  float: right;
-}
-
-.link {
-  padding: 5px;
 }
