--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* start | common style */
+
 .page-wrapper {
   text-align: center;
   position: relative;
@@ -7,6 +9,8 @@
 .link {
   padding: 5px;
 }
+
+/* end | common style */
 
 /* start | PageHeader style */
 .page-header {
