--- a/src/App.css
+++ b/src/App.css
@@ -56,13 +56,13 @@
     text-decoration: none;
     color: #000;
 
-    .title {
+    .post-card-title {
       text-align: left;
       font-size: 20px;
       font-weight: bold;
     }
 
-    .summary {
+    .post-card-summary {
       text-align: left;
       font-size: 15px;
       display: -webkit-box;
@@ -73,7 +73,7 @@
       word-break: break-word;
     }
 
-    .info {
+    .post-card-info {
       display: flex;
       justify-content: space-between;
       margin-top: auto;
