♻️ post card의 classname 변경 (#68)
## summary

post card의 className을 변경함에 따라 그에 맞는 css를 바꿔주었습니다.

- Resolves: #(Issue Number)

## PR 유형

어떤 유형인가요? 해당되는 유형에 체크해주세요.

**PR 제목 작성시 '[유형에 맞는 gitmoji] 제목'으로 입력 부탁드립니다.**

- [ ] ✨ Feature / 새로운 기능
- [ ] 🐛 Fix / 버그 수정
- [ ] 💄 Style / CSS 등 사용자 UI 디자인 변경
- [x] ♻️ Refactor / 코드 리팩토링(구조 개선, 디렉토리 변경 등...)
- [ ] 📝 Docs / 문서 수정
- [ ] ✅ Test / 테스트 추가, 테스트 리팩토링
- [ ] 💬 Chore / 그 외, 모든 변경점(Package, Rename, Remove, etc...)

## 변경 사항

post card와 post detail의 classname이 동일하여 css 관리가 어려우므로 post card 내의
classname을 속성에 맞게 변경하였습니다.

## PR Checklist

PR이 다음 요구 사항을 충족하는지 확인하세요.

- [x] 정상 동작 확인 여부
- [x] commit message convention 충족 여부

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
+/* common style */
+
 a {
   text-decoration: none;
 }
+
 .page-wrapper {
   text-align: center;
   position: relative;
   padding: 30px;
 }
+
+/* PageHeader style */
 
 .page-header-wrapper {
   display: flex;
@@ -65,13 +70,13 @@ a {
     text-decoration: none;
     color: #000;
 
-    .post-title {
+    .post-card-title {
       text-align: left;
       font-size: 20px;
       font-weight: bold;
     }
 
-    .post-content {
+    .post-card-summary {
       text-align: left;
       font-size: 15px;
       display: -webkit-box;
@@ -82,18 +87,7 @@ a {
       word-break: break-word;
     }
 
-    .post-content h1,
-    .post-content h2,
-    .post-content h3,
-    .post-content h4,
-    .post-content h5,
-    .post-content h6 {
-      font-size: inherit;
-      font-weight: inherit;
-      margin: 0;
-    }
-
-    .post-info {
+    .post-card-info {
       display: flex;
       justify-content: space-between;
       margin-top: auto;
