--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,21 @@ a {
   font-weight: 800;
 }
 
+/* PageDetail style */
+
+.page-detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post-header,
+.post-content {
+  width: 100%;
+  max-width: 1040px;
+  text-align: left;
+}
+
 /* PostCard style */
 
 .post-card-wrapper:hover .post-title {
